[package]
name = "nvn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvn-macro = { path = "./nvn-macro" }
modular-bitfield = "0.10"
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk.git" }
nn = { git = "https://github.com/blu-dev/nn-rs" }